src/objects/sma__MAButtonSet__c.object
<CustomObject>
    <fields>
        <fullName>sma__CustomAddressLayout__c</fullName>
        <label>Custom Address Layout</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sma__MassActionLayout__c</fullName>
        <label>Mass Action Layout</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sma__MyPositionLayout__c</fullName>
        <label>My Position Layout</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sma__POILayout__c</fullName>
        <label>POI Layout</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sma__TooltipLayout__c</fullName>
        <label>Tooltip Layout</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>MapAnything Button Set</label>
    <listViews>
        <fullName>sma__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Label</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MapAnything Button Sets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>